[package]
name = "bevy_framepace"
version = "0.20.1"
edition = "2024"
resolver = "2"
description = "Frame pacing and frame limiting for Bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aevyrie/bevy_framepace"
documentation = "https://docs.rs/bevy_framepace"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = { version = "0.17.2", default-features = false }
bevy_ecs = { version = "0.17.2", default-features = false }
bevy_diagnostic = { version = "0.17.2", default-features = false }
bevy_log = { version = "0.17.2", default-features = false }
bevy_render = { version = "0.17.2", default-features = false }
bevy_reflect = { version = "0.17.2", default-features = false }
bevy_time = { version = "0.17.2", default-features = false }
bevy_platform = { version = "0.17.2", default-features = false }
bevy_window = { version = "0.17.2", default-features = false }
bevy_winit = { version = "0.17.2", default-features = false }
# Non-bevy
spin_sleep = "1.0"

# Winit will explode in docs.rs otherwise
[package.metadata.docs.rs]
features = ["bevy_winit/x11"]

[features]
default = ["framepace_debug"]
framepace_debug = []

[dev-dependencies]
bevy = { version = "0.17.2", default-features = false, features = [
    "bevy_color",
    "bevy_ui_render",
    "bevy_gizmos",
    "bevy_winit",
    "bevy_window",
    "default_font",
    "x11",
] }

[[example]]
name = "demo"
path = "examples/demo.rs"
required-features = ["default"]

[[example]]
name = "minimal"
path = "examples/minimal.rs"
required-features = ["default"]
